--- a/estilos/partials/_positions.scss
+++ b/estilos/partials/_positions.scss
@@ -261,11 +261,11 @@
     grid-template-areas: 
     "... ...  ...   ...   ..."
     "only only only  only only"
-    "... on12 on12  on12  on12"
+    "on12 on12 on12  on12  on12"
     "... ...  on12p on12p ..."
-    "... on24 on24  on24  on24"
+    "on24 on24 on24  on24  on24"
     "... ...  on24p on24p ..."
-    "... on36 on36  on36  on36"
+    "on36 on36 on36  on36  on36"
     "... ...  on36p on36p ..."
     "... ...  ...   ...   ...";
 
