--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -321,7 +321,7 @@ html {
 
 .boton_flotante:hover {
   transform: scale(1.5);
-  transform: translateY(-100px);
+  transform: translateY(-7px);
 }
 
 .entrada_menu {
@@ -666,4 +666,12 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/*media querries*/
+@media (max-width: 480px) {
+  .menu_main {
+    width: 110%;
+    padding: 0.5rem;
+  }
 }/*# sourceMappingURL=estilo.css.map */
